css/style.css
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=DM+Serif+Display:ital@0;1&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
}

body {
  background-color: #f3e5d8;
}

#grid-container {
  max-width: 100%;
  height: 100vh;
  margin: 0 auto;
  padding: 20px;
  padding-bottom: 0px;

  display: grid;
  grid-template-rows: 78px 1fr 78px;
  grid-template-columns: 100px 1fr 100px;

  grid-template-areas:
    "header header header"
    "space main space2"
    "footer footer footer";
}

header {
  background-color: #255538;
  grid-area: header;

  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  border-radius: 6px;
  max-height: 58px;
  font-family: "DM Sans";
}

#logo,
#logo_foot {
  font-family: "DM Serif Display";
  font-size: 24px;
}

header a {
  text-decoration: none;
  color: white;
}

header nav ul {
  display: flex;
  list-style-type: none;
  gap: 20px;
  font-size: 16px;
}

main {
  grid-area: main;
}

#banner {
  max-width: 100%;
  height: 368px;
  background-image: url(../img/desayuno.png);
  background-position: center center;
  background-size: cover;
  border-radius: 5px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  padding: 56px;
}

#banner::before {
  position: absolute;
  content: "";
  inset: 0;
  background-color: rgba(0, 0, 0, 0.33);
  border-radius: 5px;
}

.text-prueba {
  position: relative;
  font-family: "DM Serif Display";
  font-size: 64px;
  width: 448px;
  color: white;
  line-height: 0.9;
}

#titulo {
  font-family: "DM Serif Display";
  font-size: 24px;
  letter-spacing: 1px;
  line-height: 32.9px;
  padding-top: 40px;
  padding-bottom: 28px;
  color: #7e4333;
}

#Recipes a {
  text-decoration: none;
}

#Recipes img {
  width: 380px;
  height: 248px;
  object-fit: cover;
  border-radius: 5px;
}

#Recipes .recipe {
  background-color: white;
  padding: 10px;
  border-radius: 5px;
  transition: transform 0.3s ease;
}

#Recipes .recipe:hover {
  transform: scale(1.1);
}

#Recipes h2 {
  padding-top: 20px;
  padding-left: 10px;
  font-family: "DM Serif Display";
  color: #7e4333;
  font-size: 36px;
}

#Recipes ul {
  padding-top: 11px;
}

#Recipes ul li {
  font-family: "DM Sans";
  font-size: 16px;
  color: black;
}
.recipes1,
.recipes2 {
  display: flex;
  gap: 20px;
  margin-bottom: 20px;
  width: 100%;
}

footer {
  grid-area: footer;
  display: flex;
  justify-content: space-between;
  align-items: center;

  max-height: 78px;
  background-color: #255538;
  border-radius: 6px 6px 0 0;
  padding: 20px;
}

footer p {
  font-family: "DM Sans";
  font-size: 16px;
  color: white;
  padding-right: 20px;
}

